--- a/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
+++ b/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
@@ -215,6 +215,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Recargar Tabla"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRecargarTAblaActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSAlir">
               <Properties>
