--- a/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/AdminPrincipal.form
+++ b/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/AdminPrincipal.form
@@ -174,6 +174,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Recargar Tabla"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRecargarTablaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnBorrarUsuario">
           <Properties>
@@ -224,6 +227,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Nuevo Usuario"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNuevoUsuarioActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator1">
           <Properties>
