--- a/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
+++ b/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
@@ -75,7 +75,7 @@
                       <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="btnBorrarUsuario" min="-2" pref="204" max="-2" attributes="0"/>
+                              <Component id="btnNuevoUsuario" min="-2" pref="204" max="-2" attributes="0"/>
                               <EmptySpace pref="85" max="32767" attributes="0"/>
                               <Component id="btnRecargarTAbla" min="-2" pref="208" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
@@ -123,7 +123,7 @@
                       <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnRecargarTAbla" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnBorrarUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnNuevoUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnSAlir" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
@@ -194,7 +194,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="btnBorrarUsuario">
+            <Component class="javax.swing.JButton" name="btnNuevoUsuario">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="24" style="3"/>
@@ -204,6 +204,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Nuevo Usuario"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNuevoUsuarioActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnRecargarTAbla">
               <Properties>
